# SolTrace

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  railway.toml
config/: default.toml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  handlers.rs  lib.rs  routes.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: account_mapper.rs  classifier.rs  idl_decoder.rs  lib.rs  system_program.rs  token_program.rs
crates/filter_dsl/: Cargo.toml
crates/filter_dsl/src/: evaluator.rs  lexer.rs  lib.rs  parser.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: backfill.rs  lib.rs  rpc_listener.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  postgres.rs  redis_cache.rs  webhooks.rs
dashboard/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/health/: page.tsx
dashboard/app/login/: page.tsx
dashboard/app/signup/: page.tsx
dashboard/app/transfers/: layout.tsx  page.tsx
dashboard/app/wallets/: page.tsx
dashboard/components/: AuthModal.tsx  HealthBar.tsx  SearchBar.tsx  Shell.tsx  Sidebar.tsx  StatsCards.tsx  Topbar.tsx  TransferChart.tsx  TransferTable.tsx  WalletManager.tsx  WelcomeBanner.tsx
dashboard/hooks/: useApi.ts  useAuth.tsx
migrations/: 001_initial_schema.sql  002_phase2_backfill_webhooks_idls.sql  003_users_auth.sql  004_google_oauth.sql  005_wallet_user_scope.sql
