[package]
name = "soltrace-api"
version.workspace = true
edition.workspace = true

[dependencies]
soltrace-storage = { workspace = true }
soltrace-decoder = { workspace = true }
soltrace-ingestion = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
