[package]
name = "soltrace-ingestion"
version.workspace = true
edition.workspace = true

[dependencies]
soltrace-decoder = { workspace = true }
soltrace-storage = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
bs58 = "0.5"

[lints]
workspace = true
