[package]
name = "soltrace-storage"
version.workspace = true
edition.workspace = true

[dependencies]
soltrace-decoder = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
